fix for doubled visible in editor images and partial fix for too-wide image insert dialog

--- a/annotum-base/css/article-admin.css
+++ b/annotum-base/css/article-admin.css
@@ -329,7 +329,7 @@ table#anno-references table td table td {
 	padding-right: 10px;
 }
 #anno-popup-images-inside table td.img-list-title {
-	width: 340px;
+	width: 260px;
 }
 #anno-popup-images-inside table td.img-list-actions {
 	text-align: center;
